# content-negotiation

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml
docs/: conf.py  index.rst  reference.rst
src/content_negotiation/: __init__.py  content_negotiation.py  language_negotiation.py  utils.py
tests/: __init__.py  test_content_negotiation.py  test_language_negotiation.py
tests/unit/: __init__.py  test_get_default_content_type.py  test_is_media_range_type_in_supported_content_types.py  test_prepare_weighted_language.py  test_prepare_weighted_media_range.py  test_weighted_language.py  test_weighted_media_range.py
