[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Amund Tenstad <github@amund.io>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for deciding content-type based on media ranges in HTTP Accept headers."
documentation = "https://content-negotiation.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/content-negotiation"
license = "Apache-2.0"
name = "content-negotiation"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/content-negotiation"
version = "1.1.2"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.0.1"
bandit = "^1.7.4"
black = "^22.1.0"
codecov = "^2.0.16"
coverage = "^6.4"
darglint = "^1.5.5"
flake8 = "^5.0.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.971"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytype = {version= "^2022.8.30", python = ">=3.8,<3.11"}
safety = "^2.1.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinxcontrib-napoleon = "^0.7"
xdoctest = "^1.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["content_negotiation"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
