[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Amund Tenstad <github@amund.io>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for deciding content-type based on media ranges in HTTP Accept headers."
documentation = "https://content-negotiation.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/content-negotiation"
license = "Apache-2.0"
name = "content-negotiation"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/content-negotiation"
version = "2.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^9.1.0"
bandit = "^1.9.4"
black = ">=26.3.1"
codecov = "^2.1.13"
coverage = "^7.13.5"
darglint = "^1.8.1"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
mypy = ">=1.20.0"
nox = "^2026.2.9"
nox-poetry = ">=1.2.0"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytype = {version= "^2024.10.11", python = ">=3.12,<4.0"}
safety = "^3.7.0"
sphinx-autodoc-typehints = "^3.9.11"
sphinxcontrib-napoleon = "^0.7"
xdoctest = "^1.3.2"
pip-audit = "^2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["content_negotiation"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
